tests/baselines/reference/parser_continueNotInIterationStatement1.errors.txt
parser_continueNotInIterationStatement1.ts(1,1): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.


==== parser_continueNotInIterationStatement1.ts (1 errors) ====
    continue;
    ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.